# hybridwm

./: Cargo.toml  README.md  must_be_example.toml
src/: config_read.rs  main.rs  state.rs
src/layouts/: wm_layouts_mod.rs
src/workspaces/: wm_workspaces.rs
