[package]
name = "hybridwm"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.56"
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"

[dependencies.smithay]
version = "3.0.0"
git = "https://github.com/Smithay/smithay"
features = ["xwayland"]